--- a/code/code.html
+++ b/code/code.html
@@ -1,1 +1,18 @@
-
+<html>
+<head>
+		<title>Работа с элементами компьютерного кода</title>
+</head>
+<body>
+<p>Для обозначения ввода с клавиатуры используется тэг &lt;kbd&gt;</p>
+<p><kbd>File | Save...</kbd></p>
+<samp>
+demo.info Jan 2015 09:10:17
+Linux -grsec+gg3+e+gr2b-reslog-
+</samp>
+<code>
+<p>Длина окружности вычисляется по формуле: <code>L = 2 * pi * r</code>, где <var>r</var> — радиус круга.</p>
+<pre><code>int radius = 5;
+System.out.println(2 * radius);</code></pre>
+</code>
+</body>
+</html>
